--- a/english.html
+++ b/english.html
@@ -265,9 +265,17 @@ Error message and password prompt
 
 <li>Coen Sisters</li>
 
+<li>Dreams that we've dreamt</li>
+
 <li>Elementary</li>
 
+<li>Eva</li>
+
 <li>Eva Coen</li>
+
+<li>Gura</li>
+
+<li>Iry</li>
 
 <li>John Irving</li>
 
@@ -277,9 +285,15 @@ Error message and password prompt
 
 <li>Radio epgb</li>
 
+<li>Russell</li>
+
 <li>soul</li>
 
+<li>The team</li>
+
 <li>the wishing star 01</li>
+
+<li>Tomer</li>
 
 <li>Yoyo</li>
 
@@ -8130,10 +8144,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200115162503678" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20200202160916785" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200115162507703" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200202164648693" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8390,7 +8404,7 @@ coming soon as possible
 
  &lt;&lt;heblink [[ארוחת כריסמס]]&gt;&gt;</pre>
 </div>
-<div created="20180915085721246" modified="20200120160555003" tags="[[Monkeys with car keys]] [[outer sisters]]" title="Coen Sisters">
+<div created="20180915085721246" modified="20200202164147339" tags="[[Monkeys with car keys]] [[Outer sisters]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -8402,7 +8416,7 @@ coming soon as possible
 [img[pictures/attunitenglish.jpg]]
 
 
-!!![[yoyo]]:
+!!![[Yoyo]]:
 
 Hello,
 
@@ -8411,7 +8425,7 @@ It was a fantastic meal, gummy-a-bearge. I mostly remember me standing there, wo
 
 For the opening lines, I'm pasting the part where Eva described me standing there, speaking in front of my friends at the [[9-side-wishing-star]]:
 
-Pretty long time ago, 13-14 years ago, I had this.... phase. I was high all the time, and regardless, I've always liked to invent things. One of the things that I invented back then was that I am a basic Hungarian woman, named Eva Coen, and actually as far as I was concerned, I was the sister of Ethan and Joel Coen, the Coen brothers, even though Joel is the name of my father and I don't have any brothers, only four sisters, just like [[Dr Derek Shepherd|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. The idea remained and continued to evolve, and with time I decided that I want to establish a group of independent but related creators that will be called Coen sisters. I shared it with Gura, my beautiful little sister. Gura and I have worked for many days, developing the agenda and the characters, the concept and the drama. We wrote a foundation for eight chapters series about the sisters with an option to continue... And why am I telling you this? Because when I arrived to the apartment I realized that that's the launch pad of the sisters, and that's why I built the lab in my sleeping room. And now, for the real thing. I'm inviting each one of you to join the group.  A basic condition for entering the sisters' project is that Saraleh would have liked it. Who is Saraleh? Saraleh is a woman who died due to brain cancer, just like Meir Ariel told in the movie [[THE CAMPAIGN OF MEIR ARIEL|https://www.youtube.com/watch?v=yFXUEoXCkT8]] (5:30 minutes into the movie), about a woman who was taken young, and had a very interesting mind, and he wished that she was his literature teacher. He tells about her craziest most brilliant jokes, and about the urge he had to write her a goodbye thirty days after she passed, something like a love poem for his teacher that he might even ask her to grade. And who decides whether deceased Saraleh would have liked it or not? The naive thing that I aspire is neither I nor any other sisters' member ever have to behave as a politician, because I'm sure that Saraleh would have not liked it.
+Pretty long time ago, 13-14 years ago, I had this.... phase. I was high all the time, and regardless, I've always liked to invent things. One of the things that I [[invented|Dreams that we've dreamt]] back then was that I am a basic Hungarian woman, named Eva Coen, and actually as far as I was concerned, I was the sister of Ethan and Joel Coen, the Coen brothers, even though Joel is the name of my father and I don't have any brothers, only four sisters, just like [[Dr Derek Shepherd|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. The idea remained and continued to evolve, and with time I decided that I want to establish a group of independent but related creators that will be called Coen sisters. I shared it with Gura, my beautiful little sister. Gura and I have worked for many days, developing the agenda and the characters, the concept and the drama. We wrote a foundation for eight chapters series about the sisters with an option to continue... And why am I telling you this? Because when I arrived to the apartment I realized that that's the launch pad of the sisters, and that's why I built the lab in my sleeping room. And now, for the real thing. I'm inviting each one of you to join the group.  A basic condition for entering the sisters' project is that Saraleh would have liked it. Who is Saraleh? Saraleh is a woman who died due to brain cancer, just like Meir Ariel told in the movie [[THE CAMPAIGN OF MEIR ARIEL|https://www.youtube.com/watch?v=yFXUEoXCkT8]] (5:30 minutes into the movie), about a woman who was taken young, and had a very interesting mind, and he wished that she was his literature teacher. He tells about her craziest most brilliant jokes, and about the urge he had to write her a goodbye thirty days after she passed, something like a love poem for his teacher that he might even ask her to grade. And who decides whether deceased Saraleh would have liked it or not? The naive thing that I aspire is neither I nor any other sisters' member ever have to behave as a politician, because I'm sure that Saraleh would have not liked it.
 
 Or like Gura and I wrote back then, when I lived between the oaks:
 
@@ -8423,6 +8437,12 @@ Be good.
 
  &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
 </div>
+<div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
+<pre>
+[img[pictures/chalomot-shechalamnoo.jpg]]
+
+ &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
+</div>
 <div created="20190226092627784" modified="20190226092924645" tags="[[TV Series]]" title="Elementary">
 <pre>[img[pictures/elementary.jpg]]
 
@@ -8430,6 +8450,13 @@ Be good.
 
 Sherlock, in the Jonny Lee Miller version, watches seven screens at the same time, as his gaze is fixated on an imaginary spot on top of and the center of the screens, so that he practically sees all of them, and if something unusual pops up, he freezes the picture and knows that there's something in it. Sweet Watson completes his words. In the next cut, they'll talk about it with Marcus and Gregson, and the mystery is solved or will be solved really soon. It's a super-fun series.
 &lt;&lt;heblink [[אלמנטרי]]&gt;&gt;</pre>
+</div>
+<div created="20200202161040118" modified="20200202161942123" tags="Metafiction [[The estate]]" title="Eva">
+<pre>
+[img[pictures/eva-veyoyo.jpg]]
+
+
+ &lt;&lt;heblink [[אווה]]&gt;&gt;</pre>
 </div>
 <div created="20200115145347212" modified="20200115151526343" tags="" title="Eva Coen">
 <pre>[img[pictures/eva-coen.jpg]]
@@ -8447,6 +8474,21 @@ There aren't enough words or space to describe Eva, and whatsoever she has writt
 Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, stories by Dana the doll, about her life with Iris, the daughter of Eva and Eva.
 
  &lt;&lt;heblink [[אווה כהן]]&gt;&gt;</pre>
+</div>
+<div created="20200202161830591" modified="20200202162556278" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]]" title="Gura">
+<pre>
+[img[pictures/VOYeMadgknrTKN6D.jpg]]
+
+
+ &lt;&lt;heblink [[גורה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200202163025535" modified="20200202163717639" tags="[[Coen sister]]" title="Iry">
+<pre>
+[img[pictures/iri.jpg]]
+
+ &lt;&lt;heblink [[אירי]]&gt;&gt;
+</pre>
 </div>
 <div created="20191113143908637" modified="20191113144254373" tags="[[outer sisters]] films" title="John Irving">
 <pre>[img[pictures/john-irving.jpg]]
@@ -8488,6 +8530,15 @@ He did his best at raising us as good people, and in most cases he even succeede
 
 &lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
 </div>
+<div created="20200202163339570" modified="20200202163759854" tags="[[Coen sister]] [[Single parent children]]" title="Russell">
+<pre>
+[img[pictures/rachel.jpg]]
+
+
+
+ &lt;&lt;heblink [[ראשל]]&gt;&gt;
+</pre>
+</div>
 <div created="20191113140141218" modified="20191113141156199" tags="Metafiction" title="soul">
 <pre>[img[pictures/neshama.jpg]]
 
@@ -8501,6 +8552,15 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
+<div created="20200202164120005" modified="20200202164704589" tags="[[Coen sister]] [[The archive's trustees]] [[Food addicts]]" title="The team">
+<pre>
+[img[pictures/hazevet.jpg]]
+
+ &lt;&lt;heblink [[הצוות]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20200115161700360" modified="20200115162215492" tags="Houses 9-side-wishing-star" title="the wishing star 01">
 <pre>[img[pictures/hadira.jpg]]
 
@@ -8508,6 +8568,16 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
 
  &lt;&lt;heblink [[כוכב המשאלות 01]]&gt;&gt;</pre>
+</div>
+<div created="20200202164522080" modified="20200202164753749" tags="[[A friend]] [[Coen sister]]" title="Tomer">
+<pre>
+[img[pictures/tomer.jpg]]
+
+ &lt;&lt;heblink [[תומר]]&gt;&gt;
+
+
+
+</pre>
 </div>
 <div created="20200101132642919" modified="20200101133516550" tags="" title="Yoyo">
 <pre>[img[pictures/yoyo.jpg]]
