--- a/index.html
+++ b/index.html
@@ -9042,9 +9042,8 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;title&quot;: &quot;Untitled&quot;,
-            &quot;text&quot;: &quot;https://yuvalerel.com/&quot;,
-            &quot;type&quot;: &quot;text/plain&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/user/Desktop/coen%20sisters/pictures/eva-veyoyo.jpg&quot;,
+            &quot;title&quot;: &quot;Untitled&quot;
         }
     }
 }</pre>
@@ -9161,10 +9160,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200127115409970" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200202162715190" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200130162013727" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200202162719158" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9173,7 +9172,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ג'ונג נוסע לליון]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9193,7 +9192,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200130163248234" title="$:/temp/search">
+<div created="20161023184814872" modified="20200202164819569" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9525,7 +9524,7 @@ well,
 
 </pre>
 </div>
-<div created="20170608165812345" modified="20200115151118168" tags="[[משפחת באומן]] [[נאמני הגנזך]]" title="אבא יואל">
+<div created="20170608165812345" modified="20200202160502559" tags="[[משפחת באומן]] [[נאמני הגנזך]]" title="אבא יואל">
 <pre>[img[pictures/aba-vetirza.jpg]]
 
 !!![[יויו]]:
@@ -9617,7 +9616,7 @@ well,
 
 אודליה היא אחות קיי שסוחרת באמנות. לבושה בשיא הסטייל, יודעת טאנטרה, חתיכה לאללה, לא מקומית, משיגה כל מה שהיא רוצה, רווקה, צעירה מהאחרות. </pre>
 </div>
-<div created="20161213185747995" modified="20180128155935130" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]]" title="אווה">
+<div created="20161213185747995" modified="20200202162618124" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]]" title="אווה">
 <pre>[img[pictures/eva-veyoyo.jpg]]
 
 ''או בשמה המלא, אווה כהן.''
@@ -9638,7 +9637,7 @@ well,
 
 
  
-
+&lt;&lt;englink [[Eva]]&gt;&gt;
 </pre>
 </div>
 <div created="20161215192348716" modified="20200115151207745" tags="[[אחות כהן]] אימהות" title="אווה כהן">
@@ -10197,7 +10196,7 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[אימהות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161206200127567" modified="20190626152540491" tags="[[אחות כהן]]" title="אירי">
+<div created="20161206200127567" modified="20200202164349033" tags="[[אחות כהן]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
@@ -10219,6 +10218,9 @@ well,
 3. [[דיוויד בואי]].
 
 4. [[אירי טוענת]]
+
+
+&lt;&lt;englink [[Iry]]&gt;&gt;
 
 
 
@@ -10935,7 +10937,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20161026214951927" modified="20181001132700354" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] כביסה" title="גורה">
+<div created="20161026214951927" modified="20200202163250626" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] כביסה" title="גורה">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 !!![[יויו]]:
@@ -10951,7 +10953,9 @@ Is where I want to be
 
 אחרי שנפצעה [[כתבה|עיר בנויה מרחובות]] וקראה כל הזמן.
 
-וגם עכשיו - מהרגע שפתחתי את [[האתר הזה|האחיות כהן]], [[היא לא מפסיקה לכתוב|הכתיבה]], ממלאה ומעטרת ומשתדלת להתנהג כיאות.</pre>
+וגם עכשיו - מהרגע שפתחתי את [[האתר הזה|האחיות כהן]], [[היא לא מפסיקה לכתוב|הכתיבה]], ממלאה ומעטרת ומשתדלת להתנהג כיאות.
+
+&lt;&lt;englink [[Gura]]&gt;&gt;</pre>
 </div>
 <div created="20170725142116429" modified="20170725142307592" tags="[[מחפשת את אירי]]" title="גורה מספרת 01">
 <pre>[img[pictures/mechapeset-1.jpg]]
@@ -12515,13 +12519,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ה-K סיסטרס לא סובלות אותה.</pre>
 </div>
-<div created="20180315162507739" modified="20180430140219026" tags="[[אחות כהן]] [[נאמני הגנזך]] [[חיות אוכל]]" title="הצוות">
+<div created="20180315162507739" modified="20200202164837751" tags="[[אחות כהן]] [[נאמני הגנזך]] [[חיות אוכל]]" title="הצוות">
 <pre>[img[pictures/hazevet.jpg]]
 
 הצוות זה אנחנו המתגוררים [[בדירה|כוכב המשאלות 01]] מחודשת חוזה השכירות, כלומר [[יויו]], [[אירי]] [[וגורה|גורה]], שבשעות הפנאי שלנו  אופים, מבשלים וכותבים את המתכונים וגם.
 
 
 &lt;&lt;list-links filter:&quot;[tag[הצוות]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[The team]]&gt;&gt;
+
+
 
 
 </pre>
@@ -12816,7 +12824,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אצל [[חינאווי|http://wineandmore.co.il/pages/8219-Wine--More-%D7%AA%D7%9C-%D7%90%D7%91%D7%99%D7%91-%D7%A7%D7%A8%D7%9C%D7%99%D7%91%D7%9A-25]] המוכרים שמטפלים בך מאד יפה, מבינים ממש במזון ומשקאות. שם אני קונה בשר, אבל גם אלכוהול  ועוד.</pre>
 </div>
-<div created="20170422183732891" modified="20190220053717712" tags="הצוות ילדים" title="חלומות שחלמנו">
+<div created="20170422183732891" modified="20200202161311814" tags="הצוות ילדים" title="חלומות שחלמנו">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
 !!![[יויו]]:
@@ -12826,6 +12834,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[חלומות שחלמנו]]&quot;&gt;&gt;
 
+
+
+&lt;&lt;englink [[Dreams that we've dreamt]]&gt;&gt;
 </pre>
 </div>
 <div created="20190309100625286" modified="20190310200317180" tags="[[כאן בגטו]] סרטים [[סיפורים אמיתיים]]" title="חלון אחורי">
@@ -17425,12 +17436,15 @@ Fapina''
 
 הם גרים בקיבוץ בערבה והיא מתפרנסת מאריגת שטיחים צבעוניים, על נולים ענקיים, מרצועות טריקו צבעוניות.</pre>
 </div>
-<div created="20170401150113960" modified="20170612152446776" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="ראשל">
+<div created="20170401150113960" modified="20200202164029119" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="ראשל">
 <pre>[img[pictures/rachel.jpg]]
 
 !!![[גורה]]:
 
-ראשל היא בתה הצעירה של [[ז'נבייב]], היא ילידת שנת 2000, היא תיכוניסטית במגמת אומנות פלסטית, והיא [[ג'וקרית|ילדים חד הוריים]] אמיתית.</pre>
+ראשל היא בתה הצעירה של [[ז'נבייב]], היא ילידת שנת 2000, היא תיכוניסטית במגמת אומנות פלסטית, והיא [[ג'וקרית|ילדים חד הוריים]] אמיתית.
+
+&lt;&lt;englink [[Russell]]&gt;&gt;
+</pre>
 </div>
 <div created="20170822191101898" modified="20190617134812785" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] מסעדות מטבחים" title="רביזיה במטבח">
 <pre>[img[pictures/revisia-bamitbach.jpg]]
@@ -18309,12 +18323,16 @@ Fapina''
 
 [[אנג'ליק]] המתוקה נראתה לי יפהפיה ברגע שראיתי אותה, אבל הייתי בטוח שיש לה עניינים עם [[אלפרד]], מה שהתברר כלא נכון לאחר שציננתי פוטנציאל להתלהבות מבעוד מועד. בתקופה שהיא נתפסה על [[הסופרנוס]] היא השפיעה על כולנו, ואת פרק הסיום ראינו יחד. ככה הזמן עבר עד שיומיים לפני הארוחה היא באה איתי לשוק ובדרך בגינה הרגשתי שבשל הרגע. אספתי אותה אלי כאביר, הבטתי בה, ראיתי את מבטה המחייך ונישקתי אותה ארוכות והיא אהובתי. </pre>
 </div>
-<div created="20170401223255295" modified="20180815065144216" tags="[[אחות כהן]] חבר" title="תומר">
+<div created="20170401223255295" modified="20200202164911070" tags="[[אחות כהן]] חבר" title="תומר">
 <pre>[img[pictures/tomer.jpg]]
 
 !!![[יויו]]:
 
 כשבאנו מפריז להלוויה של [[אימא שלנו|דינה ז&quot;ל]], [[גורה]] ואני, ומיד אחר כך [[אבא|אבא יואל]] סיפר לי שיש לו חברה כבר שנים, והייתי מחוסל, תומר לקח אותי לסלע שמעל הים עם בקבוק ויסקי. אנחנו חברים מהגנון, הוא גר בתל אביב עם אשתו והתינוקת שלהם, ובכל פעם שאני מגיע, אני לוקח יומיים שלושה בעיר, ומבלה איתו אצלו [[בגטו|כאן בגטו]].
+
+&lt;&lt;englink [[Tomer]]&gt;&gt;
+
+
 
 </pre>
 </div>
