--- a/english.html
+++ b/english.html
@@ -251,9 +251,11 @@ Error message and password prompt
 
 <li>9-side-wishing-star</li>
 
+<li>A politician</li>
+
 <li>Alan Ball</li>
 
-<li>ayala malach pines</li>
+<li>Ayala Malach Pines</li>
 
 <li>Berry Sakharof</li>
 
@@ -269,11 +271,15 @@ Error message and password prompt
 
 <li>Elementary</li>
 
+<li>Ethan and Joel Coen</li>
+
 <li>Eva</li>
 
 <li>Eva Coen</li>
 
 <li>Gura</li>
+
+<li>HH</li>
 
 <li>Iry</li>
 
@@ -281,13 +287,27 @@ Error message and password prompt
 
 <li>logo-bg</li>
 
+<li>Love</li>
+
+<li>Meir Ariel</li>
+
+<li>Monkeys with car keys</li>
+
 <li>Papa Yoel</li>
 
 <li>Radio epgb</li>
 
 <li>Russell</li>
 
+<li>Saraleh would have liked it</li>
+
 <li>soul</li>
+
+<li>The first assembly</li>
+
+<li>The lab</li>
+
+<li>The sisters' questionnaire</li>
 
 <li>The team</li>
 
@@ -8144,10 +8164,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200202160916785" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200202190209755" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200202164648693" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200202190214514" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8156,7 +8176,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]] [[Monkeys with car keys]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8338,6 +8358,16 @@ coming soon as possible
 
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
 </div>
+<div created="20200202185308186" modified="20200202185632492" title="A politician">
+<pre>
+[img[pictures/politician.jpg]]
+
+
+
+ &lt;&lt;heblink [[פוליטיקאי]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20191113140946887" modified="20191113143105603" tags="[[outer sisters]] films tv [[tv series]]" title="Alan Ball">
 <pre>[img[pictures/alan-ball.jpg]]
 
@@ -8351,10 +8381,10 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20191113130654313" modified="20191113131340124" tags="" title="ayala malach pines">
+<div created="20191113130654313" modified="20200202165959680" tags="" title="Ayala Malach Pines">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
 
-!!![[yoyo]]:
+!!![[Yoyo]]:
 
 
 In the post-Ella episode, the boss that I used to have back then, gave me a piece of paper with Ayala Malach's phone number, and said: &quot;call her, she's a serious psychologist, she's a colleague of my wife, don't mess it up&quot;.
@@ -8404,7 +8434,7 @@ coming soon as possible
 
  &lt;&lt;heblink [[ארוחת כריסמס]]&gt;&gt;</pre>
 </div>
-<div created="20180915085721246" modified="20200202164147339" tags="[[Monkeys with car keys]] [[Outer sisters]]" title="Coen Sisters">
+<div created="20180915085721246" modified="20200202190736797" tags="[[Monkeys with car keys]] [[Outer sisters]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -8425,11 +8455,11 @@ It was a fantastic meal, gummy-a-bearge. I mostly remember me standing there, wo
 
 For the opening lines, I'm pasting the part where Eva described me standing there, speaking in front of my friends at the [[9-side-wishing-star]]:
 
-Pretty long time ago, 13-14 years ago, I had this.... phase. I was high all the time, and regardless, I've always liked to invent things. One of the things that I [[invented|Dreams that we've dreamt]] back then was that I am a basic Hungarian woman, named Eva Coen, and actually as far as I was concerned, I was the sister of Ethan and Joel Coen, the Coen brothers, even though Joel is the name of my father and I don't have any brothers, only four sisters, just like [[Dr Derek Shepherd|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. The idea remained and continued to evolve, and with time I decided that I want to establish a group of independent but related creators that will be called Coen sisters. I shared it with Gura, my beautiful little sister. Gura and I have worked for many days, developing the agenda and the characters, the concept and the drama. We wrote a foundation for eight chapters series about the sisters with an option to continue... And why am I telling you this? Because when I arrived to the apartment I realized that that's the launch pad of the sisters, and that's why I built the lab in my sleeping room. And now, for the real thing. I'm inviting each one of you to join the group.  A basic condition for entering the sisters' project is that Saraleh would have liked it. Who is Saraleh? Saraleh is a woman who died due to brain cancer, just like Meir Ariel told in the movie [[THE CAMPAIGN OF MEIR ARIEL|https://www.youtube.com/watch?v=yFXUEoXCkT8]] (5:30 minutes into the movie), about a woman who was taken young, and had a very interesting mind, and he wished that she was his literature teacher. He tells about her craziest most brilliant jokes, and about the urge he had to write her a goodbye thirty days after she passed, something like a love poem for his teacher that he might even ask her to grade. And who decides whether deceased Saraleh would have liked it or not? The naive thing that I aspire is neither I nor any other sisters' member ever have to behave as a politician, because I'm sure that Saraleh would have not liked it.
+Pretty long time ago, 13-14 years ago, I had this.... phase. I was high all the time, and regardless, I've always liked to invent things. One of the things that I [[invented|Dreams that we've dreamt]] back then was that I am a basic Hungarian woman, named [[Eva Coen]], and actually as far as I was concerned, I was the sister of [[Ethan and Joel Coen]], the Coen brothers, even though Joel is the name of [[my father|Papa Yoel]] and I don't have any brothers, only four sisters, just like [[Dr Derek Shepherd|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. The idea remained and continued to evolve, and with time I decided that I want to establish a group of independent but related creators that will be called Coen sisters. I shared it with [[Gura]], my beautiful little sister. Gura and I [[have worked|The first assembly]] for many days, developing the agenda and the characters, the concept and the drama. We wrote [[a foundation|HH]] for eight chapters series about the sisters with an option to continue... And why am I telling you this? Because when I arrived to the apartment I realized that that's the launch pad of the sisters, and that's why I built [[the lab|The lab]] in my sleeping room. And now, for the real thing. I'm inviting each one of you to join the group.  A basic condition for entering the sisters' project is that [[Saraleh would have liked it]]. Who is Saraleh? Saraleh is a woman who died due to brain cancer, just like [[Meir Ariel]] told in the movie [[THE CAMPAIGN OF MEIR ARIEL|https://www.youtube.com/watch?v=yFXUEoXCkT8]] (5:30 minutes into the movie), about a woman who was taken young, and had a very interesting mind, and he wished that she was his literature teacher. He tells about her craziest most brilliant jokes, and about the urge he had to write her a goodbye thirty days after she passed, something like a love poem for his teacher that he might even ask her to grade. And who decides whether deceased Saraleh would have [[liked it|Love]] or not? The naive thing that I aspire is neither I nor any other sisters' member ever have to behave as [[a politician|A politician]], because I'm sure that Saraleh would have not liked it.
 
-Or like Gura and I wrote back then, when I lived between the oaks:
+Or like Gura and I wrote back then, when I lived [[between the oaks|The lab]]:
 
-The sisters' questionnaire
+[[The sisters' questionnaire]]
 
 Be good. 
 
@@ -8438,8 +8468,7 @@ Be good.
  &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
 </div>
 <div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
-<pre>
-[img[pictures/chalomot-shechalamnoo.jpg]]
+<pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
  &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
 </div>
@@ -8451,14 +8480,23 @@ Be good.
 Sherlock, in the Jonny Lee Miller version, watches seven screens at the same time, as his gaze is fixated on an imaginary spot on top of and the center of the screens, so that he practically sees all of them, and if something unusual pops up, he freezes the picture and knows that there's something in it. Sweet Watson completes his words. In the next cut, they'll talk about it with Marcus and Gregson, and the mystery is solved or will be solved really soon. It's a super-fun series.
 &lt;&lt;heblink [[אלמנטרי]]&gt;&gt;</pre>
 </div>
-<div created="20200202161040118" modified="20200202161942123" tags="Metafiction [[The estate]]" title="Eva">
+<div created="20200202170301933" modified="20200202170459823" tags="[[Outer sisters]] Films" title="Ethan and Joel Coen">
 <pre>
-[img[pictures/eva-veyoyo.jpg]]
+[img[pictures/cohen-brothers.jpg]]
+
+
+ &lt;&lt;heblink [[איתן וג'ואל כהן]]&gt;&gt;
+
+
+</pre>
+</div>
+<div created="20200202161040118" modified="20200202161942123" tags="Metafiction [[The estate]]" title="Eva">
+<pre>[img[pictures/eva-veyoyo.jpg]]
 
 
  &lt;&lt;heblink [[אווה]]&gt;&gt;</pre>
 </div>
-<div created="20200115145347212" modified="20200115151526343" tags="" title="Eva Coen">
+<div created="20200115145347212" modified="20200202171038249" tags="[[Coen sister]] Mothers" title="Eva Coen">
 <pre>[img[pictures/eva-coen.jpg]]
 
 !!![[Gura]]:
@@ -8476,16 +8514,27 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[אווה כהן]]&gt;&gt;</pre>
 </div>
 <div created="20200202161830591" modified="20200202162556278" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]]" title="Gura">
-<pre>
-[img[pictures/VOYeMadgknrTKN6D.jpg]]
+<pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 
  &lt;&lt;heblink [[גורה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200202163025535" modified="20200202163717639" tags="[[Coen sister]]" title="Iry">
+<div created="20200202172034727" modified="20200202172221953" tags="Metafiction" title="HH">
 <pre>
-[img[pictures/iri.jpg]]
+Happy Hour
+
+[img[pictures/hh.jpg]]
+
+
+ &lt;&lt;heblink [[HH]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200202163025535" modified="20200202163717639" tags="[[Coen sister]]" title="Iry">
+<pre>[img[pictures/iri.jpg]]
 
  &lt;&lt;heblink [[אירי]]&gt;&gt;
 </pre>
@@ -8502,6 +8551,39 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
+</div>
+<div created="20200202180428182" modified="20200202185353882" tags="[[Life according to Genevieve]]" title="Love">
+<pre>
+
+[img[pictures/ahava.jpg]]
+
+
+ &lt;&lt;heblink [[אהבה]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200202175811447" modified="20200202180131685" tags="[[Outer sisters]] Music" title="Meir Ariel">
+<pre>
+[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
+
+
+ &lt;&lt;heblink [[מאיר אריאל]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200202190317522" modified="20200202190606989" tags="[[TV Series]] TV" title="Monkeys with car keys">
+<pre>
+[img[pictures/kofim-memunaim.jpg]]
+
+
+
+ &lt;&lt;heblink [[קופים ממונעים]]&gt;&gt;
+
+
+
+</pre>
 </div>
 <div created="20200101125351383" modified="20200101133049907" tags="" title="Papa Yoel">
 <pre>[img[pictures/aba-vetirza.jpg]]
@@ -8531,12 +8613,18 @@ He did his best at raising us as good people, and in most cases he even succeede
 &lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
 </div>
 <div created="20200202163339570" modified="20200202163759854" tags="[[Coen sister]] [[Single parent children]]" title="Russell">
-<pre>
-[img[pictures/rachel.jpg]]
+<pre>[img[pictures/rachel.jpg]]
 
 
 
  &lt;&lt;heblink [[ראשל]]&gt;&gt;
+</pre>
+</div>
+<div created="20200202175127567" modified="20200202175246360" tags="[[Outer sisters]] Music" title="Saraleh would have liked it">
+<pre>[img[pictures/sarale-hayta.jpg]]
+
+
+ &lt;&lt;heblink [[שרלה הייתה אוהבת את זה]]&gt;&gt;
 </pre>
 </div>
 <div created="20191113140141218" modified="20191113141156199" tags="Metafiction" title="soul">
@@ -8552,9 +8640,39 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
-<div created="20200202164120005" modified="20200202164704589" tags="[[Coen sister]] [[The archive's trustees]] [[Food addicts]]" title="The team">
+<div created="20200202171450477" modified="20200202171622841" tags="[[Monkeys with car keys]]" title="The first assembly">
 <pre>
-[img[pictures/hazevet.jpg]]
+[img[pictures/asefot.jpg]]
+
+ &lt;&lt;heblink [[האסיפה הראשונה]]&gt;&gt;
+
+
+</pre>
+</div>
+<div created="20200202172756391" modified="20200202172934789" tags="Metafiction Houses [[The archive's trustees]]" title="The lab">
+<pre>
+[img[pictures/hamaabada.jpg]]
+
+
+
+ &lt;&lt;heblink [[המעבדה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200202185828817" modified="20200202185933864" tags="[[Coen sister]]" title="The sisters' questionnaire">
+<pre>
+[img[pictures/sheelon-haachayot.jpg]]
+
+
+
+ &lt;&lt;heblink [[שאלון האחיות]]&gt;&gt;
+
+
+
+
+</pre>
+</div>
+<div created="20200202164120005" modified="20200202164704589" tags="[[Coen sister]] [[The archive's trustees]] [[Food addicts]]" title="The team">
+<pre>[img[pictures/hazevet.jpg]]
 
  &lt;&lt;heblink [[הצוות]]&gt;&gt;
 
@@ -8570,8 +8688,7 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
  &lt;&lt;heblink [[כוכב המשאלות 01]]&gt;&gt;</pre>
 </div>
 <div created="20200202164522080" modified="20200202164753749" tags="[[A friend]] [[Coen sister]]" title="Tomer">
-<pre>
-[img[pictures/tomer.jpg]]
+<pre>[img[pictures/tomer.jpg]]
 
  &lt;&lt;heblink [[תומר]]&gt;&gt;
 
