--- a/index.html
+++ b/index.html
@@ -9172,7 +9172,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[קופים ממונעים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9192,7 +9192,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200202164819569" title="$:/temp/search">
+<div created="20161023184814872" modified="20200202190250532" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9369,7 +9369,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 גם בדף כזה אפשר להכניס פיסקה מימין לשמאל.
 @@</pre>
 </div>
-<div created="20161024200912852" modified="20170918170551322" tags="[[מטא בדיון]]" title="HH">
+<div created="20161024200912852" modified="20200202172958540" tags="[[מטא בדיון]]" title="HH">
 <pre>! Happy Hour
 
 !!![[גורה]]: 
@@ -9395,7 +9395,10 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
 
 
-&lt;&lt;list-links filter:&quot;[tag[HH]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[HH]]&quot;&gt;&gt;
+
+
+&lt;&lt;englink [[HH]]&gt;&gt;</pre>
 </div>
 <div created="20170504194252766" modified="20170612200916674" title="imagine">
 <pre>[img[pictures/imagine.jpg]]
@@ -9575,7 +9578,7 @@ well,
 
 אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
 </div>
-<div created="20170112164936113" modified="20180129113406305" tags="[[המטבח על פי ז'נבייב]]" title="אהבה">
+<div created="20170112164936113" modified="20200202180831455" tags="[[המטבח על פי ז'נבייב]]" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -9589,6 +9592,8 @@ well,
 אני משתדלת לאהוב את עצמי, כולל את נטייתי להתרתח מדברים.
 
 למשל מרתיח אותי כשמשתמשים סתם במילים, למשל במילה אהבה.
+
+&lt;&lt;englink [[Love]]&gt;&gt;
 
 
 </pre>
@@ -10268,7 +10273,7 @@ well,
 
 איריס בתה של [[אווה]], והיא ילדה זרחנית. זורחת באור ובחושך.</pre>
 </div>
-<div created="20170415200315789" modified="20190126101744795" tags="[[אחיות חוץ]] סרטים" title="איתן וג'ואל כהן">
+<div created="20170415200315789" modified="20200202171642038" tags="[[אחיות חוץ]] סרטים" title="איתן וג'ואל כהן">
 <pre>[img[pictures/cohen-brothers.jpg]]
 
 !!![[גורה]]:
@@ -10276,6 +10281,8 @@ well,
   [[האחים איתן וג'ואל כהן|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%97%D7%99%D7%9D_%D7%9B%D7%94%D7%9F]], שיויו אימץ בתחילת שנות האלפיים, והפך אותם לאחיו, ואת עצמו [[לאווה כהן|אווה]], אחותם - שהיא קונדיטורית הונגריה, היו [[ראשית האחיות|המעבדה]].
 
 הוא לגמרי לא [[היחידי שמת עליהם|פארגו]] ועל [[הראש הנפלא שלהם|ביג לבובסקי]].
+
+&lt;&lt;englink [[Ethan and Joel Coen]]&gt;&gt;
 
 
 
@@ -11903,7 +11910,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;list-links filter:&quot;[tag[האחיות בלות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161111215423587" modified="20200115154007593" tags="[[קופים ממונעים]]" title="האחיות כהן">
+<div created="20161111215423587" modified="20200202190744006" tags="[[קופים ממונעים]]" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -11949,7 +11956,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 כל אחד [[פריבילגי|גבר פריבילגי]] בדרכו. ברור שאם נולדת לבנה, יפה, חתיכה, אינטלגנטית, סקסית ובתה של [[דוקטור גריי המיתולוגית|https://www.imdb.com/name/nm0123632/?ref_=ttfc_fc_cl_t42]], ובאת להתמחות - אף אחד לא יהיה אמפתי לכך שהיא לא ראתה אותך ממטר.
 [[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|https://www.imdb.com/name/nm0690186/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, [[אחרי לילה סוער ומסעיר|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], עם מי שמתברר אחר כך, [[כמק דרימי|https://www.imdb.com/name/nm0001131/?ref_=tt_cl_t5]] - מנתח המוח החתיך, שייהרג בסוף עונה 11 לאורך פרק שלם. השיחות האינטימיות ביותר קורות מעל פציינטים מורדמים, עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת להראות את מורכבות ההיררכיה האנושית, לתת בראש כשצריך, ותמיד לרגש.</pre>
 </div>
-<div created="20170504162635914" modified="20190626185816251" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
+<div created="20170504162635914" modified="20200202172243405" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[פיליפ]]:
@@ -11963,6 +11970,8 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &quot;זה קרה לפני חמישה ימים, [[שפגעתי|ממשיכים לדמם]] בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|imagine]], 
 
 כשהוא אמר את זה נזכרתי באיתן שלי, בני הצעיר, וכמה קשה לי איתו, אני הפסיכיאטר, [[הולך יחף|אני הפסיכיאטר]].
+
+&lt;&lt;englink [[The first Assembly]]&gt;&gt;
 
 
 
@@ -12310,7 +12319,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20181030160742262" tags="בתים [[נאמני הגנזך]] [[מטא בדיון]]" title="המעבדה">
+<div created="20161113192814802" modified="20200202175358534" tags="בתים [[נאמני הגנזך]] [[מטא בדיון]]" title="המעבדה">
 <pre>[img[pictures/hamaabada.jpg]]
 
 ''כאן היינו''
@@ -12347,7 +12356,9 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 כעת (השנה היא 2016 ואנחנו בפריז), המעבדה/ מתקן השיגור, נמצאת/א בחדרו של יויו [[שבדירה|כוכב המשאלות 01]], ומלבד שתינו נמצאות איתנו שאר האחיות.
 
-[[loving you|https://www.youtube.com/watch?v=kE0pwJ5PMDg]]</pre>
+[[loving you|https://www.youtube.com/watch?v=kE0pwJ5PMDg]]
+
+&lt;&lt;englink [[The lab]]&gt;&gt;</pre>
 </div>
 <div created="20170320191741802" modified="20170507182321859" tags="HH" title="המצלמה">
 <pre>[img[pictures/UqCNt0i5VQFWqv6t.jpg]]
@@ -14569,7 +14580,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ''האם מותר לכם לפרסם את הגירסה החדשה שלכם ברשת?''
 כן, במסגרת תנאי הרשיון (לפרטים, לחצו על ה&lt;img alt=&quot;Creative Commons License&quot; style=&quot;width:44px; border-width:0&quot; src=&quot;https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png&quot;&gt; בצד ימין למטה)</pre>
 </div>
-<div created="20170328175210280" modified="20190408113757510" tags="[[אחיות חוץ]] מוזיקה" title="מאיר אריאל">
+<div created="20170328175210280" modified="20200202180756320" tags="[[אחיות חוץ]] מוזיקה" title="מאיר אריאל">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
 
 
@@ -14590,6 +14601,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 כלומר:
 
 [[מאיר אריאל  זצ&quot;ל|https://he.wikipedia.org/wiki/%D7%9E%D7%90%D7%99%D7%A8_%D7%90%D7%A8%D7%99%D7%90%D7%9C]], 
+
+
+&lt;&lt;englink [[Meir Ariel]]&gt;&gt;
 </pre>
 </div>
 <div created="20170601174031503" modified="20170601223003837" tags="[[בחוות החיות]]" title="מאכילים את המצפון">
@@ -16677,7 +16691,7 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170419212629057" modified="20170504140039659" title="פוליטיקאי">
+<div created="20170419212629057" modified="20200202185613313" title="פוליטיקאי">
 <pre>[img[pictures/politician.jpg]]
 
 
@@ -16689,6 +16703,7 @@ __אופן ההכנה____
 
 
 
+&lt;&lt;englink [[A poitician]]&gt;&gt;
 
 
 </pre>
@@ -17258,7 +17273,7 @@ Fapina''
 
 7. מגישים: על צלחת גדולה ערימת קוסקוס ועליה המרק.</pre>
 </div>
-<div created="20170817155826253" modified="20190310195934824" tags="סדרות טלוויזיה" title="קופים ממונעים">
+<div created="20170817155826253" modified="20200202190716869" tags="סדרות טלוויזיה" title="קופים ממונעים">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 !!![[יויו]]: 
@@ -17280,9 +17295,7 @@ Fapina''
 
 
 
-
-
-</pre>
+&lt;&lt;englink [[Monkeys with car keys]]&gt;&gt;</pre>
 </div>
 <div created="20180212123730869" modified="20180605132418202" tags="[[חיות אוכל]] מתכונים" title="קנלוני">
 <pre>[img[pictures/cannelloni.jpg]]
@@ -17690,7 +17703,7 @@ Fapina''
 
 בחורף הגשום למדי, על האדמה הסלעית, מתחת לעצי האלון הגדולים, בין עלים יבשים, בלוטים, ספלולים, מקלות בגדלים שונים - [[צומחות לפלא רקפות נחמדות מאד|https://www.youtube.com/watch?v=jSyIEPBUsZo]].</pre>
 </div>
-<div created="20161213210419446" modified="20190425093238429" tags="[[אחות כהן]]" title="שאלון האחיות">
+<div created="20161213210419446" modified="20200202190054227" tags="[[אחות כהן]]" title="שאלון האחיות">
 <pre>[img[pictures/sheelon-haachayot.jpg]]
 
 !!![[גורה]]:
@@ -17812,7 +17825,9 @@ Fapina''
 # האם את בעלת חוש הומור?
 # האם ידוע לך מי הקים את המאה ואחת?
 
-[[שלח]]</pre>
+[[שלח]]
+
+&lt;&lt;englink [[The sisters' questionnaire]]&gt;&gt;</pre>
 </div>
 <div created="20161026213244448" modified="20170507182847514" tags="HH" title="שָה נוּאָר">
 <pre>ב[[ים טתיס]] אין כיסוי סלולרי או אינטרנט, אבל ב[[געזונטהייטס]] יש
@@ -18190,7 +18205,7 @@ Fapina''
 //
 ברשותך, אני מבינה שזה עוד לא הזמן שלי להעיר הערות, אבל דבר אחד, לא מפריע לי כובע או לא כובע, אבל אי אפשר שהשערות של החברה יטבלו באוכל ויתרוצצו על הפנים - במטבח משאירים את השערות מאחור, אני בעד קשתות.//</pre>
 </div>
-<div created="20161113183624587" modified="20180208154752906" tags="[[אחיות חוץ]] מוזיקה" title="שרלה הייתה אוהבת את זה">
+<div created="20161113183624587" modified="20200202175636897" tags="[[אחיות חוץ]] מוזיקה" title="שרלה הייתה אוהבת את זה">
 <pre>[img[pictures/sarale-hayta.jpg]]
 
 
@@ -18202,6 +18217,7 @@ Fapina''
 הרוח בעץ.
 עגלה על הגשר.
 העשב נוצץ.
+
 
 
 מגבעות ומטפחת.
@@ -18252,6 +18268,8 @@ Fapina''
 העשב נוצץ.
 שד מתרוצץ.
 הרוח בעץ.
+
+&lt;&lt;englink [[Sareleh would have liked it]]&gt;&gt;
 </pre>
 </div>
 <div created="20180315105819806" modified="20180605132646732" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] [[חיות אוכל]] הצוות מתכונים" title="תבשיל ירקות">
@@ -18323,7 +18341,7 @@ Fapina''
 
 [[אנג'ליק]] המתוקה נראתה לי יפהפיה ברגע שראיתי אותה, אבל הייתי בטוח שיש לה עניינים עם [[אלפרד]], מה שהתברר כלא נכון לאחר שציננתי פוטנציאל להתלהבות מבעוד מועד. בתקופה שהיא נתפסה על [[הסופרנוס]] היא השפיעה על כולנו, ואת פרק הסיום ראינו יחד. ככה הזמן עבר עד שיומיים לפני הארוחה היא באה איתי לשוק ובדרך בגינה הרגשתי שבשל הרגע. אספתי אותה אלי כאביר, הבטתי בה, ראיתי את מבטה המחייך ונישקתי אותה ארוכות והיא אהובתי. </pre>
 </div>
-<div created="20170401223255295" modified="20200202164911070" tags="[[אחות כהן]] חבר" title="תומר">
+<div created="20170401223255295" modified="20200202170538686" tags="[[אחות כהן]] חבר" title="תומר">
 <pre>[img[pictures/tomer.jpg]]
 
 !!![[יויו]]:
