--- a/index.html
+++ b/index.html
@@ -9172,7 +9172,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קופים ממונעים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11956,7 +11956,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 כל אחד [[פריבילגי|גבר פריבילגי]] בדרכו. ברור שאם נולדת לבנה, יפה, חתיכה, אינטלגנטית, סקסית ובתה של [[דוקטור גריי המיתולוגית|https://www.imdb.com/name/nm0123632/?ref_=ttfc_fc_cl_t42]], ובאת להתמחות - אף אחד לא יהיה אמפתי לכך שהיא לא ראתה אותך ממטר.
 [[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|https://www.imdb.com/name/nm0690186/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, [[אחרי לילה סוער ומסעיר|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], עם מי שמתברר אחר כך, [[כמק דרימי|https://www.imdb.com/name/nm0001131/?ref_=tt_cl_t5]] - מנתח המוח החתיך, שייהרג בסוף עונה 11 לאורך פרק שלם. השיחות האינטימיות ביותר קורות מעל פציינטים מורדמים, עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת להראות את מורכבות ההיררכיה האנושית, לתת בראש כשצריך, ותמיד לרגש.</pre>
 </div>
-<div created="20170504162635914" modified="20200202172243405" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
+<div created="20170504162635914" modified="20200202192202945" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[פיליפ]]:
@@ -11971,7 +11971,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 כשהוא אמר את זה נזכרתי באיתן שלי, בני הצעיר, וכמה קשה לי איתו, אני הפסיכיאטר, [[הולך יחף|אני הפסיכיאטר]].
 
-&lt;&lt;englink [[The first Assembly]]&gt;&gt;
+&lt;&lt;englink [[The first assembly]]&gt;&gt;
 
 
 
@@ -16691,7 +16691,7 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170419212629057" modified="20200202185613313" title="פוליטיקאי">
+<div created="20170419212629057" modified="20200202191428063" title="פוליטיקאי">
 <pre>[img[pictures/politician.jpg]]
 
 
@@ -16703,7 +16703,7 @@ __אופן ההכנה____
 
 
 
-&lt;&lt;englink [[A poitician]]&gt;&gt;
+&lt;&lt;englink [[A politician]]&gt;&gt;
 
 
 </pre>
@@ -18205,7 +18205,7 @@ Fapina''
 //
 ברשותך, אני מבינה שזה עוד לא הזמן שלי להעיר הערות, אבל דבר אחד, לא מפריע לי כובע או לא כובע, אבל אי אפשר שהשערות של החברה יטבלו באוכל ויתרוצצו על הפנים - במטבח משאירים את השערות מאחור, אני בעד קשתות.//</pre>
 </div>
-<div created="20161113183624587" modified="20200202175636897" tags="[[אחיות חוץ]] מוזיקה" title="שרלה הייתה אוהבת את זה">
+<div created="20161113183624587" modified="20200202192004341" tags="[[אחיות חוץ]] מוזיקה" title="שרלה הייתה אוהבת את זה">
 <pre>[img[pictures/sarale-hayta.jpg]]
 
 
@@ -18269,7 +18269,7 @@ Fapina''
 שד מתרוצץ.
 הרוח בעץ.
 
-&lt;&lt;englink [[Sareleh would have liked it]]&gt;&gt;
+&lt;&lt;englink [[Saraleh would have liked it]]&gt;&gt;
 </pre>
 </div>
 <div created="20180315105819806" modified="20180605132646732" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] [[חיות אוכל]] הצוות מתכונים" title="תבשיל ירקות">
