--- a/english.html
+++ b/english.html
@@ -8176,7 +8176,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]] [[Monkeys with car keys]]" title="$:/StoryList">
+<div list="[[Ayala Malach Pines]] Tomer [[The team]] Russell Iry Gura Eva [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8359,8 +8359,7 @@ coming soon as possible
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
 </div>
 <div created="20200202185308186" modified="20200202185632492" title="A politician">
-<pre>
-[img[pictures/politician.jpg]]
+<pre>[img[pictures/politician.jpg]]
 
 
 
@@ -8381,7 +8380,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20191113130654313" modified="20200202165959680" tags="" title="Ayala Malach Pines">
+<div created="20191113130654313" modified="20200202192522840" tags="" title="Ayala Malach Pines">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
 
 !!![[Yoyo]]:
@@ -8391,7 +8390,7 @@ In the post-Ella episode, the boss that I used to have back then, gave me a piec
 I had difficult problems to solve back then, and she always listened, smiled and understood. It was clear it's gonna take time, but with a caressing glance she told me: the blue is already here, and I understood. And today, I already know that she was completely right.
 A soul was born by her inspiration. May she rest in peace.  
 
- &lt;&lt;heblink [[איילה מלאך]]&gt;&gt;</pre>
+ &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
 <div created="20191113143329168" modified="20191113144209430" tags="music [[outer sisters]]" title="Berry Sakharof">
 <pre>[img[pictures/Berry-Sakharof.jpg]]
@@ -8481,8 +8480,7 @@ Sherlock, in the Jonny Lee Miller version, watches seven screens at the same tim
 &lt;&lt;heblink [[אלמנטרי]]&gt;&gt;</pre>
 </div>
 <div created="20200202170301933" modified="20200202170459823" tags="[[Outer sisters]] Films" title="Ethan and Joel Coen">
-<pre>
-[img[pictures/cohen-brothers.jpg]]
+<pre>[img[pictures/cohen-brothers.jpg]]
 
 
  &lt;&lt;heblink [[איתן וג'ואל כהן]]&gt;&gt;
@@ -8521,8 +8519,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 </pre>
 </div>
 <div created="20200202172034727" modified="20200202172221953" tags="Metafiction" title="HH">
-<pre>
-Happy Hour
+<pre>Happy Hour
 
 [img[pictures/hh.jpg]]
 
@@ -8554,7 +8551,6 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </div>
 <div created="20200202180428182" modified="20200202185353882" tags="[[Life according to Genevieve]]" title="Love">
 <pre>
-
 [img[pictures/ahava.jpg]]
 
 
@@ -8563,8 +8559,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200202175811447" modified="20200202180131685" tags="[[Outer sisters]] Music" title="Meir Ariel">
-<pre>
-[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
+<pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
 
 
  &lt;&lt;heblink [[מאיר אריאל]]&gt;&gt;
@@ -8574,8 +8569,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200202190317522" modified="20200202190606989" tags="[[TV Series]] TV" title="Monkeys with car keys">
-<pre>
-[img[pictures/kofim-memunaim.jpg]]
+<pre>[img[pictures/kofim-memunaim.jpg]]
 
 
 
@@ -8641,8 +8635,7 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
 <div created="20200202171450477" modified="20200202171622841" tags="[[Monkeys with car keys]]" title="The first assembly">
-<pre>
-[img[pictures/asefot.jpg]]
+<pre>[img[pictures/asefot.jpg]]
 
  &lt;&lt;heblink [[האסיפה הראשונה]]&gt;&gt;
 
@@ -8650,8 +8643,7 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 </pre>
 </div>
 <div created="20200202172756391" modified="20200202172934789" tags="Metafiction Houses [[The archive's trustees]]" title="The lab">
-<pre>
-[img[pictures/hamaabada.jpg]]
+<pre>[img[pictures/hamaabada.jpg]]
 
 
 
@@ -8659,8 +8651,7 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 </pre>
 </div>
 <div created="20200202185828817" modified="20200202185933864" tags="[[Coen sister]]" title="The sisters' questionnaire">
-<pre>
-[img[pictures/sheelon-haachayot.jpg]]
+<pre>[img[pictures/sheelon-haachayot.jpg]]
 
 
 
