--- a/english.html
+++ b/english.html
@@ -267,6 +267,10 @@ Error message and password prompt
 
 <li>Coen Sisters</li>
 
+<li>Dandan went</li>
+
+<li>Draft of 'The first assembly'</li>
+
 <li>Dreams that we've dreamt</li>
 
 <li>Elementary</li>
@@ -277,13 +281,29 @@ Error message and password prompt
 
 <li>Eva Coen</li>
 
+<li>Fa</li>
+
+<li>Films</li>
+
 <li>Gura</li>
 
+<li>Here in the Ghetto</li>
+
 <li>HH</li>
+
+<li>I, the psychiatrist</li>
+
+<li>Imagine</li>
+
+<li>Iris the daughter</li>
 
 <li>Iry</li>
 
 <li>John Irving</li>
+
+<li>Keep on bleeding</li>
+
+<li>Laundry</li>
 
 <li>logo-bg</li>
 
@@ -291,9 +311,17 @@ Error message and password prompt
 
 <li>Meir Ariel</li>
 
+<li>Metafiction</li>
+
 <li>Monkeys with car keys</li>
 
+<li>On the road to somewhere</li>
+
+<li>Outer sisters</li>
+
 <li>Papa Yoel</li>
+
+<li>Philippe</li>
 
 <li>Radio epgb</li>
 
@@ -302,6 +330,8 @@ Error message and password prompt
 <li>Saraleh would have liked it</li>
 
 <li>soul</li>
+
+<li>The blue is already here</li>
 
 <li>The first assembly</li>
 
@@ -314,6 +344,12 @@ Error message and password prompt
 <li>the wishing star 01</li>
 
 <li>Tomer</li>
+
+<li>True stories</li>
+
+<li>TV Series</li>
+
+<li>Wishing star 04</li>
 
 <li>Yoyo</li>
 
@@ -8164,10 +8200,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200202190209755" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200202190214514" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200212155836780" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8176,7 +8212,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Ayala Malach Pines]] Tomer [[The team]] Russell Iry Gura Eva [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Draft of 'The first assembly']] [[Coen Sisters]] [[Christmas dinner]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8196,7 +8232,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180915093658355" title="$:/temp/search">
+<div created="20161023184814872" modified="20200212171030840" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8380,15 +8416,15 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20191113130654313" modified="20200202192522840" tags="" title="Ayala Malach Pines">
+<div created="20191113130654313" modified="20200212160039196" tags="[[Outer sisters]]" title="Ayala Malach Pines">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
 
 !!![[Yoyo]]:
 
 
-In the post-Ella episode, the boss that I used to have back then, gave me a piece of paper with Ayala Malach's phone number, and said: &quot;call her, she's a serious psychologist, she's a colleague of my wife, don't mess it up&quot;.
-I had difficult problems to solve back then, and she always listened, smiled and understood. It was clear it's gonna take time, but with a caressing glance she told me: the blue is already here, and I understood. And today, I already know that she was completely right.
-A soul was born by her inspiration. May she rest in peace.  
+In the post-[[Ella|Wishing star 04]] episode, the boss that I used to have back then, gave me a piece of paper with [[Ayala Malach's|https://he.wikipedia.or g/wiki/%D7%90%D7%99%D7%99%D7%9C%D7%94_%D7%9E%D7%9C%D7%90%D7%9A_%D7%A4%D7%99%D7%99%D7%A0%D7%A1]] phone number, and said: &quot;call her, she's a serious psychologist, she's a colleague of my wife, don't mess it up&quot;.
+I had difficult problems to solve back then, and she always listened, smiled and understood. It was clear it's gonna take time, but with a caressing glance she told me: [[The blue is already here]], and I understood. And today, I already know that she was completely right.
+A [[soul]] was born by her inspiration. May she rest in peace.  
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
@@ -8466,18 +8502,49 @@ Be good.
 
  &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
 </div>
+<div created="20200212171338780" modified="20200212171534372" tags="[[Coen sister]] Mothers Houses [[True stories]]" title="Dandan went">
+<pre>
+[img[pictures/dandan-nasa.jpg]]
+
+
+ &lt;&lt;heblink [[דןדן נסע]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200202171450477" draft.of="The first assembly" draft.title="The first assembly" modified="20200212174952109" tags="[[Monkeys with car keys]]" title="Draft of 'The first assembly'">
+<pre>[img[pictures/asefot.jpg]]
+
+!!![[Philippe]]:
+
+Our first assembly was at the [[monometallic Christmas dinner|Christmas dinner]] that took place in December 2015, and since then we see each other all the time. The youngsters actually work together, and I come or show up to family's dinners and such.  
+A week ago (meaning more than a year after that Christmas dinner), it was the first time since then, that Yoyo asked us all to come, and everybody except [[Dandan who went|Dandan went]], came, including [[Iris|Iris the daughter]], the daughter of my beloved Eva. 
+Yoyo stood in front of everybody, and in his wobbly way he asked [[Fa]] to stand close to him and told us how few days ago he insulted Fa, who didn't understand completely the intentions of Yoyo, when they edited the first chapter of his internet porn series.  
+&quot;It happened five days ago, that [[I hurt|Keep on bleeding]] Fa, and I couldn't let it go since. I'm really ashamed because I yelled at him and I was not very nice. On the other hand I'm just a human being, and in the end of the day I've called you here to tell you that all of us are in pain and all of us cause pain, and except for the cool things here in the archive, I think that if we really want to make a difference, we have to tell [[the real stories|True stories]] as they are, and there's nothing to be ashamed of, not even of Gura's rage seizures, and I ask you to write – not in an emotional way- but in an [[imagine|Imagine]] way.
+When he said it I thought about my Ethan, my youngest son, and how complicated are the relations between us, I, the psychiatrist, am [[walking barefoot|I, the psychiatrist]]. 
+
+
+
+ &lt;&lt;heblink [[האסיפה הראשונה]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
  &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
 </div>
-<div created="20190226092627784" modified="20190226092924645" tags="[[TV Series]]" title="Elementary">
+<div created="20190226092627784" modified="20200212165740061" tags="[[TV Series]] TV" title="Elementary">
 <pre>[img[pictures/elementary.jpg]]
 
 !!![[The team]]:
 
 Sherlock, in the Jonny Lee Miller version, watches seven screens at the same time, as his gaze is fixated on an imaginary spot on top of and the center of the screens, so that he practically sees all of them, and if something unusual pops up, he freezes the picture and knows that there's something in it. Sweet Watson completes his words. In the next cut, they'll talk about it with Marcus and Gregson, and the mystery is solved or will be solved really soon. It's a super-fun series.
-&lt;&lt;heblink [[אלמנטרי]]&gt;&gt;</pre>
+&lt;&lt;heblink [[אלמנטרי]]&gt;&gt;
+
+ &lt;&lt;heblink [[אלמנטרי]]&gt;&gt;</pre>
 </div>
 <div created="20200202170301933" modified="20200202170459823" tags="[[Outer sisters]] Films" title="Ethan and Joel Coen">
 <pre>[img[pictures/cohen-brothers.jpg]]
@@ -8511,11 +8578,38 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
  &lt;&lt;heblink [[אווה כהן]]&gt;&gt;</pre>
 </div>
+<div created="20200212172954331" modified="20200212173109594" tags="[[Coen sister]]" title="Fa">
+<pre>
+[img[pictures/fa.jpg]]
+
+
+ &lt;&lt;heblink [[פה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200212161010633" modified="20200212161543142" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<pre>[img[pictures/sratim.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Films]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[סרטים]]&gt;&gt;
+</pre>
+</div>
 <div created="20200202161830591" modified="20200202162556278" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]]" title="Gura">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 
  &lt;&lt;heblink [[גורה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200212164615918" modified="20200212164757805" tags="Metafiction [[Outer sisters]]" title="Here in the Ghetto">
+<pre>
+[img[pictures/here-in-the-ghetto.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[Here in the Ghetto]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[כאן בגטו]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200202172034727" modified="20200202172221953" tags="Metafiction" title="HH">
@@ -8529,6 +8623,45 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
 
 </pre>
+</div>
+<div created="20200212175008520" modified="20200212175438288" tags="[[True stories]] Children" title="I, the psychiatrist">
+<pre>
+[img[pictures/eytan-sheli.jpg]]
+
+
+ &lt;&lt;heblink [[אני הפסיכיאטר]]&gt;&gt;
+
+
+</pre>
+</div>
+<div created="20200212174127022" modified="20200212174834891" tags="Music [[How many songs can you even invent at all]]" title="Imagine">
+<pre>
+[img[pictures/imagine.jpg]]
+
+!!![[Coen sisters]]:
+
+[[you may say i'm a dreamer|https://www.youtube.com/watch?v=L6svOHFSAH8]]
+
+
+
+
+ &lt;&lt;heblink [[imagine]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200212171932372" modified="20200212172435735" tags="[[Coen sister]] Children [[Single parent children]]" title="Iris the daughter">
+<pre>
+[img[pictures/iris-habat.jpg]]
+
+!!![[Gura]]:
+
+Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness, and through the light.
+
+
+
+ &lt;&lt;heblink [[איריס הבת]]&gt;&gt;</pre>
 </div>
 <div created="20200202163025535" modified="20200202163717639" tags="[[Coen sister]]" title="Iry">
 <pre>[img[pictures/iri.jpg]]
@@ -8546,12 +8679,33 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ג'ון אירווינג]]&gt;&gt;
 </pre>
 </div>
+<div created="20200212173527645" modified="20200212173821877" tags="[[Animal farm]]" title="Keep on bleeding">
+<pre>
+[img[pictures/benataim-medamemim.jpg]]
+
+
+ &lt;&lt;heblink [[ובינתיים מדממים]]&gt;&gt;
+</pre>
+</div>
+<div created="20200212164125847" modified="20200212165652184" tags="Metafiction [[Here in the Ghetto]]" title="Laundry">
+<pre>
+
+[img[pictures/kevisa.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[Laundry]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[כביסה]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
 <div created="20200202180428182" modified="20200202185353882" tags="[[Life according to Genevieve]]" title="Love">
-<pre>
-[img[pictures/ahava.jpg]]
+<pre>[img[pictures/ahava.jpg]]
 
 
  &lt;&lt;heblink [[אהבה]]&gt;&gt;
@@ -8568,12 +8722,56 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 </pre>
 </div>
+<div created="20200212160436198" modified="20200212161924242" tags="[[True stories]] Films" title="Metafiction">
+<pre>[img[pictures/meta-fiction.jpg]]
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[Metafiction]]&quot;&gt;&gt;
+
+
+ &lt;&lt;heblink [[מטא בדיון]]&gt;&gt;
+
+
+
+
+
+
+
+
+
+
+
+</pre>
+</div>
 <div created="20200202190317522" modified="20200202190606989" tags="[[TV Series]] TV" title="Monkeys with car keys">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 
 
  &lt;&lt;heblink [[קופים ממונעים]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200212162303735" modified="20200212163646719" tags="[[True stories]] [[Monkeys with car keys]]" title="On the road to somewhere">
+<pre>[img[pictures/baderech-lean.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[On the road to somewhere]]&quot;&gt;&gt;
+
+
+ &lt;&lt;heblink [[בדרך לאן שהוא]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200212163427451" modified="20200212164322920" tags="[[Monkeys with car keys]] [[How many songs can you even invent at all]]" title="Outer sisters">
+<pre>
+[img[pictures/ahayot-huz.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Outer sisters]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[אחיות חוץ]]&gt;&gt;
 
 
 
@@ -8596,6 +8794,13 @@ He did his best at raising us as good people, and in most cases he even succeede
 
 
  &lt;&lt;heblink [[אבא יואל]]&gt;&gt;</pre>
+</div>
+<div created="20200212172521280" modified="20200212172606177" tags="[[Coen sister]]" title="Philippe">
+<pre>
+[img[pictures/phillip.jpg]]
+
+ &lt;&lt;heblink [[פיליפ]]&gt;&gt;
+</pre>
 </div>
 <div created="20190226093702127" modified="20191113120521333" tags="[[Here in the Ghetto]] Music Metafiction" title="Radio epgb">
 <pre>[img[pictures/radio-epgb.jpg]]
@@ -8621,7 +8826,7 @@ He did his best at raising us as good people, and in most cases he even succeede
  &lt;&lt;heblink [[שרלה הייתה אוהבת את זה]]&gt;&gt;
 </pre>
 </div>
-<div created="20191113140141218" modified="20191113141156199" tags="Metafiction" title="soul">
+<div created="20191113140141218" modified="20200212160530160" tags="Metafiction" title="soul">
 <pre>[img[pictures/neshama.jpg]]
 
 !!![[soul]]:
@@ -8633,6 +8838,12 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
+</div>
+<div created="20200212155206056" modified="20200212162915903" tags="[[True stories]] [[On the road to somewhere]]" title="The blue is already here">
+<pre>[img[pictures/hacachol-cvar-can.jpg]]
+
+
+ &lt;&lt;heblink [[הכחול כבר כאן]]&gt;&gt;</pre>
 </div>
 <div created="20200202171450477" modified="20200202171622841" tags="[[Monkeys with car keys]]" title="The first assembly">
 <pre>[img[pictures/asefot.jpg]]
@@ -8685,6 +8896,38 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
 
 
+</pre>
+</div>
+<div created="20200212161813277" modified="20200212162728261" tags="Metafiction" title="True stories">
+<pre>[img[pictures/sipurim-amitiim.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[True stories]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[סיפורים אמיתיים]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200212165433684" modified="20200212173657434" tags="TV" title="TV Series">
+<pre>
+[img[pictures/sdarot.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[TV series]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[סדרות]]&gt;&gt;
+
+
+
+
+</pre>
+</div>
+<div created="20200212154809949" modified="20200212160231559" tags="9-side-wishing-star Laundry" title="Wishing star 04">
+<pre>[img[pictures/ela.jpg]]
+
+
+
+ &lt;&lt;heblink [[כוכב המשאלות 04]]&gt;&gt;
 </pre>
 </div>
 <div created="20200101132642919" modified="20200101133516550" tags="" title="Yoyo">
